# peclet-voro

./: .clang-format  .clang-tidy  .gitignore  CITATION.cff  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  mainpage.dox  nbrlist.hpp  pyproject.toml  read_facets.m  simulation.hpp  testBuildRebuild.cpp  testBuild_Trial.cpp  testDroplet.cpp  testInterface.cpp  testSimulation.cpp  testStaticVoronoi.cpp  testViscous.cpp  testVoroComparison  testVoroComparison.cpp  vor_types.hpp  voronoi.hpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: scientific-coder.agent.md
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/: CELL_ARENA_BLOCK_STUDY.md  CMakeLists.txt  STUDY_PROTOCOL.md  analyze_results.py  benchmark_cell_arena_blocks.cpp  benchmark_cell_creation.cpp  benchmark_cell_creation_targeted.cpp  benchmark_full_build.cpp  benchmark_nbrlist_setup_diagnostic.cpp  benchmark_tess_single_thread.cpp  benchmark_update_fast_study.cpp  benchmark_update_strategy_study.cpp  benchmark_update_thread_scaling.cpp  benchmark_voronoi.cpp  cell_topology_stats.cpp  report_cell_creation_targeted.py  report_cell_creation_threads.py  report_cell_topology_hist.py  report_full_build_threads.py  report_nbrlist_setup_diagnostic.py  report_tess_single_thread.py  report_update_fast_study.py  report_update_strategy_study.py  report_update_thread_scaling.py  study_cell_arena_blocks.py
build_baseline/: Makefile
build_baseline/tests/: Makefile  test_build_rebuild  test_static_voronoi
cmake/: PecletDeps.cmake  vorflowConfig.cmake.in  voroConfig.cmake.in  voronoi_dynamicsConfig.cmake.in
docs/: Doxyfile  architecture_redesign.md  chunked_memory.md  create_document.py  data_oriented_implementation.md  distributed_voronoi.md  dynamic_update_decision_and_plan.md  dynamic_update_phase01_results.md  dynamic_update_phase2_results.md  dynamic_update_phase34_results.md  dynamic_update_repair_sweep.md  free_surface_design.md  full_port_plan.md  mainpage.dox  moved_points_repair_workflow.md  moving_points_repair_test_report.md  performance.md  performance_report.md  power_cell_solver_spec.md  profiling_results.md  review.md  sdf_geometry_plan.md  update_and_repair_redesign.md  update_to_kokkos_plan.md  update_to_kokkos_plan_suite.md  voronoi_build_plan.md  voronoi_cold_tessellation_benchmark.md  voronoi_coldbuild_benchmark_report.md  voronoi_construct_ledger.md  voronoi_cpu_migration_discussion.md  voronoi_dynamic_update_study.md  voronoi_gpu_research_program.md  voronoi_neighbor_update_overview.md  voronoi_pervertex_geometry_report.md  voronoi_simd_cells_prototype.md  voronoi_worklist_gather_project.md
examples/packed_bed_voronoi/: .gitignore  CMakeLists.txt  README.md  pack_and_seed.py  pack_bed.py  plot_cross_section.py  plot_stages.py  pore_mesh_stages.cpp  sdf_voronoi_vtu.cpp
extern_bench/: .gitignore  bench_geogram.cpp  build.sh  prelude.h  voro_gpu_bench.md  voro_gpu_bench_gen_box.py
extern_bench/shim/: Kokkos_Core.hpp
include/peclet/voro/: convex_cell.hpp  dynamic_validate.hpp  mesh_optimizer.hpp  ot_optimizer.hpp  plane_policy.hpp  reeval_tessellation.hpp  repair.hpp  sdf.hpp  subset_gather.hpp  tess_grid.hpp  tessellation_view.hpp  tessellator.hpp  topology_store.hpp  transpose.hpp  verlet_skin.hpp
include/peclet/voro/mpi/: voronoi_halo.hpp
include/peclet/voro/physics/: euler_pressure.hpp  interface.hpp  simulation.hpp  viscous.hpp
include/vorflow/: nbrlist.hpp  simulation.hpp  skin_refresh.hpp  tessellation_build.hpp  tessellation_view.hpp  vor_types.hpp
include/vorflow/device/: cell_cutter.hpp  convex_cell.hpp  convex_cell_adj.hpp  convex_cell_compact.hpp  dynamic_validate.hpp  plane_policy.hpp  reeval_tessellation.hpp  repair.hpp  sdf.hpp  subset_gather.hpp  tess_grid.hpp  tessellator.hpp  topology_store.hpp  transpose.hpp  verlet_skin.hpp
include/vorflow/host/: incremental.hpp  interface_force.hpp
include/vorflow/mpi/: voronoi_halo.hpp
include/vorflow/physics/: device_simulation.hpp  euler_pressure.hpp  interface.hpp  viscous.hpp
include/voronoi_dynamics/: cell_arena.hpp  nbrlist.hpp  simulation.hpp  vor_types.hpp  voronoi.hpp
mpi/: README.md  validate_voronoi.py  validate_voronoi_dynamics.py  validate_voronoi_halo.py  validate_voronoi_scheme_c.py
packaging/: voro_init.py
python/: CMakeLists.txt  bindings.cpp  test_vordyn.py  test_vorflow.py  test_voro.py
src/: vorflow_bindings.cpp  voro_bindings.cpp
tests/: CMakeLists.txt  test_build_rebuild.cpp  test_build_trial.cpp  test_cell_maker_growth.cpp  test_droplet.cpp  test_golden.cpp  test_incremental_skin.cpp  test_interface.cpp  test_invariants.cpp  test_moving_points_repair_stats.cpp  test_particle_lifecycle.cpp  test_power_cells.cpp  test_sdf_boundary.cpp  test_simulation.cpp  test_simulation_sparse_particles.cpp  test_static_voronoi.cpp  test_viscous.cpp  test_voro_comparison.cpp
tests/golden/: pos_eq_10000.golden
tests/kokkos/: CMakeLists.txt  bench_bvh_bestfirst.cpp  bench_bvh_gather.cpp  bench_construct.cpp  bench_construct_compact.cpp  bench_convexcell.cpp  bench_cutter.cpp  bench_device.cpp  bench_dynamic_update.cpp  bench_incremental.cpp  bench_mesh_optimizer.cpp  bench_report.cpp  bench_simd_cells.cpp  bench_update_strategies.cpp  phase0_incremental.cpp  test_cell_cutter.cpp  test_convexcell_adj.cpp  test_convexcell_geometry.cpp  test_convexcell_unit.cpp  test_device_geometry.cpp  test_device_step.cpp  test_euler_pressure.cpp  test_incremental_device.cpp  test_interface_energy.cpp  test_interface_force.cpp  test_kokkos_smoke.cpp  test_mesh_optimizer.cpp  test_pervertex_geometry.cpp  test_power_cells.cpp  test_sdf_boundary_device.cpp  test_sdf_policy.cpp  test_tessellation_invariants.cpp  test_tessellation_view.cpp  test_tessellator.cpp  test_viscous_device.cpp
tests/kokkos_mpi/: CMakeLists.txt  bench_repair_mpi.cpp  bench_voronoi_mpi.cpp  test_sdf_mpi.cpp  test_voronoi_mpi.cpp
tools/: check_include_graph.sh  clang_format_check.sh
