# Python packaging for the `peclet.voro` module (moving-particle Voronoi dynamics on Kokkos).
#
# `pip install .` builds the Kokkos device extension via scikit-build-core and installs it as the
# top-level `peclet.voro` module. The Kokkos prefix is NOT pulled from PyPI (it is GPU-arch / backend
# specific): point the build at a prefix you bootstrapped once with ../tools/bootstrap_deps.sh by
# exporting CMAKE_PREFIX_PATH, and the morton sibling must be checked out alongside (../morton).
#
#   # CPU / multicore (OpenMP):
#   CMAKE_PREFIX_PATH=/path/to/extern/install/host-openmp pip install .
#   # NVIDIA GPU — put nvcc on PATH first:
#   CMAKE_PREFIX_PATH=/path/to/extern/install/nvidia-cuda pip install .
#
# The backend (Serial / OpenMP / CUDA / HIP) is whatever that prefix was built for — one source,
# every environment. nanobind is added automatically as a build requirement.

[build-system]
requires = ["scikit-build-core>=0.8", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "peclet-voro"
version = "0.3.2"
description = "peclet.voro — device-native (Kokkos) moving-particle Voronoi dynamics + unstructured mesh gen"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Frank Peters", email = "e.a.j.f.peters@gmail.com" }]
dependencies = ["numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/computational-chemical-engineering/peclet"
Documentation = "https://github.com/computational-chemical-engineering/peclet"
Source = "https://github.com/computational-chemical-engineering/peclet-voro"

[tool.scikit-build]
minimum-version = "0.8"
cmake.version = ">=3.24"
# Build the device Python module (the install rule for vorflow_device is guarded by SKBUILD); the
# extension + peclet/voro/__init__.py are placed by CMake install() into the peclet namespace.
cmake.define = { PECLET_VORO_KOKKOS = "ON", PECLET_VORO_BUILD_PYTHON = "ON", PECLET_VORO_BUILD_TESTS = "OFF" }
wheel.install-dir = "."
wheel.packages = []
# Note: SuiteNanobind.cmake lives in the umbrella (../cmake), so `pip install .` resolves it from a
# suite checkout; a standalone sdist of just this repo is not self-contained (by design).
sdist.include = ["src", "include", "packaging", "cmake", "CMakeLists.txt", "README.md", "LICENSE"]

# ---------------------------------------------------------------------------
# Self-contained redistributable CPU wheels (cibuildwheel). PECLET_VENDOR_DEPS=ON FetchContent-builds
# Kokkos (OpenMP+Serial) + fetches the transport-core & morton headers, so the wheel needs no prefix and
# runs multicore on any x86-64 Linux. The distributed (MPI) path stays OFF in the wheel; GPU/HIP stay a
# source (sdist) / container build.
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "*-musllinux* *_i686 pp*"
build-frontend = "build"
manylinux-x86_64-image = "manylinux_2_28"
test-command = "python -c \"import peclet.voro as v; assert hasattr(v,'Tessellation'); print('peclet.voro', v.execution_space)\""

[tool.cibuildwheel.environment]
PECLET_VENDOR_DEPS = "ON"
